version/0.3/_sources/api/ansys/heart/simulator/settings/material/curve/ActiveCurve.rst.txt




ActiveCurve
===========

.. py:class:: ActiveCurve(func: tuple[numpy.ndarray, numpy.ndarray], type: Literal[stress, ca2] = 'ca2', threshold: float = 5e-07, n: int = 5)
   :canonical: ansys.heart.simulator.settings.material.curve.ActiveCurve





   Active stress or Ca2+ curve.
















   ..
       !! processed by numpydoc !!














Overview
--------
.. py:currentmodule:: ActiveCurve
.. tab-set::



    .. tab-item:: Methods

        .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~plot_time_vs_ca2`
            - Plot Ca2+ with threshold.
          * - :py:attr:`~plot_time_vs_stress`
            - Plot stress.


    .. tab-item:: Properties

        .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~dyna_input`
            - Return x,y input for k files.






Import detail
-------------

.. code-block:: python

    from ansys.heart.simulator.settings.material.curve import ActiveCurve


Property detail
---------------
.. py:property:: dyna_input
   :canonical: ansys.heart.simulator.settings.material.curve.ActiveCurve.dyna_input
   :type: None


   
   Return x,y input for k files.
















   ..
       !! processed by numpydoc !!




Method detail
-------------
.. py:method:: plot_time_vs_ca2()

   
   Plot Ca2+ with threshold.
















   ..
       !! processed by numpydoc !!

.. py:method:: plot_time_vs_stress()

   
   Plot stress.
















   ..
       !! processed by numpydoc !!


